<resources>
    <string name="app_name">Dice</string>
    <string name="title_numerical">Numerical</string>
    <string name="title_alphabetical">Alphabet</string>
    <string name="title_settings">Settings</string>
    <string name="roll_button_string">ROLL!</string>
    <string name="down_stepper_desc">Reduce the number of dice</string>
    <string name="up_stepper_desc">Increase the number of dice</string>
    <string name="one_die">1 Die</string>
    <string name="two_dice">2 Dice</string>
    <string name="three_dice">3 Dice</string>
    <string name="four_dice">4 Dice</string>
    <string name="five_dice">5 Dice</string>
    <string name="six_dice">6 Dice</string>
    <string name="default_numerical">Default Number of Numerical Dice</string>
    <string name="alphabetical_category">Letters Included in Alphabet Dice</string>
    <string name="ad_id">ca-app-pub-5863280765051652/3100110051</string>
</resources>
