<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_numerical">

    <fragment
        android:id="@+id/navigation_numerical"
        android:name="com.dylanhouston.rollthedice.ui.numerical.NumericalFragment"
        android:label="@string/title_numerical"
        tools:layout="@layout/fragment_numerical" />

    <fragment
        android:id="@+id/navigation_alphabetical"
        android:name="com.dylanhouston.rollthedice.ui.alphabetical.AlphabeticalFragment"
        android:label="@string/title_alphabetical"
        tools:layout="@layout/fragment_alphabetical" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.dylanhouston.rollthedice.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
