<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.numerical.NumericalFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dice_recycle_view"
            android:layout_width="match_parent"
            android:layout_height="273dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/red_num_dice_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/down_stepper_desc"
                android:src="@drawable/ic_remove" />

            <ImageButton
                android:id="@+id/inc_num_dice_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/up_stepper_desc"
                android:src="@drawable/ic_add_black"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/num_dice_text_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/one_die"
                android:textIsSelectable="false" />
        </LinearLayout>

        <Button
            android:id="@+id/numerical_roll_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/roll_button_string" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>